<resources>
    <color name="primaryBlue">#00bcd4</color>
    <color name="accentLightBlue">#70c6d1</color>
    <color name="secondaryBlue">#03545e</color>
    <string name="app_name">StudShare</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_header">Witaj!</string>
    <string name="welcome_text">Zaloguj się lub zarejestruj, aby otrzymać dostęp do największej bazy notatek online!</string>
    <string name="login">Zaloguj się</string>
    <string name="signup">Zarejestruj się</string>
    <string name="learnmore">Dowiedz się więcej</string>
    <string name="login_header">Logowanie</string>
    <string name="login_text">W pola poniżej wpisz swój login i hasło</string>
    <string name="login_login_hint">LOGIN</string>
    <string name="login_password_hint">HASŁO</string>
    <string name="signup_header">Rejestracja</string>
    <string name="signup_text">W polach poniżej podaj login, hasło oraz adres e-mail, który będzie przypisany do tego konta</string>
    <string name="signup_passwordrepeat_hint">POWTÓRZ HASŁO</string>
    <string name="signup_email_hint">ADRES EMAIL</string>
    <string name="profile_settings_text">Profil</string>
    <string name="profile_passwordchange_text">Zmiana hasła</string>
    <string name="profile_passwordchange_actualpassword">AKTUALNE HASŁO</string>
    <string name="profile_passwordchange_newpassword">NOWE HASŁO</string>
    <string name="profile_passwordchange_newpasswordrepeat">POWTÓRZ NOWE HASŁO</string>
    <string name="profile_passwordchange_changepassword">ZMIEŃ HASŁO</string>
    <string name="profile_emailchange_text">Zmiana e-maila</string>
    <string name="profile_emailchange_newemail">NOWY ADRES E-MAIL</string>
    <string name="profile_emailchange_newemailrepeat">POWTÓRZ NOWY ADRES E-MAIL</string>
    <string name="profile_emailchange_changeemail">ZMIEŃ E-MAIL</string>
    <string name="nointernetconnection">Brak połączenia z Internetem. Sprawdź połączenie i kliknij przycisk poniżej.</string>
    <string name="tryagain">SPRÓBUJ PONOWNIE</string>
    <string name="add_header">Dodaj</string>
    <string name="add_note_header">Dodawanie</string>
    <string name="add_note_description">Podaj tytuł notatki oraz tagi, które opisują tę notatkę, a następnie kliknij w przycisk DODAJ.</string>
    <string name="add_note_title">TYTUŁ</string>
    <string name="add_note_tags">TAGI</string>
    <string name="add_note_add">DODAJ</string>
    <string name="edit_note_header">Edycja</string>
    <string name="edit_note_description">Zmień tytuł notatki lub tagi, które opisują tę notatkę, a następnie kliknij w przycisk ZAPISZ ZMIANY.</string>
    <string name="edit_note_save">ZAPISZ ZMIANY</string>
    <string name="title_activity_samp2">Samp2</string>
    <string name="add_note2_header">Dod NOTATKA</string>
</resources>